# aiter

./: .clang-format  .gitignore  .gitmodules  .tmp_asm_aiter.dis  0001-Add-mla.hpp.patch  0423_gdr_prefill_bench_standalone.py  15_final_isa.s  AGENTS.md  BENCHMARK_FLOPS.md  BENCHMARK_USAGE.md  CK_FMHA_SPLITKV_BENCHMARK_STATUS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTE.md  F8_FMHA_D192_VD128_1TG_8W_32mx8_128nx1.sp3  LICENSE  MANIFEST.in  MLA_QH128_SPLIT2_NAN_WORKLOG.md  MXFP8_BATCH_GEMM_TODO.md  Makefile  PA_BLOCK_ID_TRUNCATION_BUG.md  PORT_PLAN_gemm1_layout_api.md  PORT_PLAN_layoutapi_copyatom_mma.md  PR_mhc_large_m.md  README.md  RELEASE_NOTES_v0.1.12.md  RELEASE_PROCESS.md  REPO_CLEANUP_PLAN.md  SAGE_ATTENTION_PROFILING.md  TRITON_PS_METADATA_IMPLEMENTATION.md  _ancestor_1.patch  _ancestor_2.patch  _ancestor_3.patch  _ancestor_4.patch  _apply.patch  _sweep_gemm.py  _test_iq_bm16_e2e.py  _test_iq_g1_bm16.py  _test_iq_milestone1.py  _test_iq_quantcheck.py  (+175 more)
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  actionlint.yaml  changelog-config.json  runner-config.yml
April-topk/: baselline_topk_per_row_kernels.cu  readme.md  test_baseline.cu  test_topk_v1.cu  test_topk_v2.cu  test_topk_v3.cu  test_topk_v4.cu  topk_bothPD_mulblocks_v1.cu  topk_bothPD_mulblocks_v2.cu  topk_bothPD_mulblocks_v3.cu  topk_bothPD_mulblocks_v4.cu
aiter/: .fused_moe.py.swp  __init__.py  bert_padding.py  dsv4_validate.py  fhmoe.py  fused_fmha_fwd_f16.py  fused_moe.py  fused_moe_asmjit_aot.py  fused_moe_bf16_asm.py  fused_moe_dp_shared_expert.py  fused_moe_gfx942.py  fused_moe_ptpc_fp8.py  fused_moe_pyhip_hsaco.py  fused_moe_smoothquant.py  fused_vadd.py  int4_utils.py  mla.py  paged_attn.py  rotary_embedding.py  sonic_moe.py  test_common.py  test_mha_common.py  test_moe_flydsl.py  tuned_gemm.py
aiter/ops/comms/: CMakeLists.txt  README.md  __init__.py  py_rms_norm.cpp  py_rms_norm.h  pyproject.toml  rmsnorm.h  rmsnorm_kernel.cpp
aiter/ops/comms/examples/: dist-spawn-rms-mixed.py  dist-torch-rms-mixed.py  shared-rms-mixed.py
aiter_logs/: run.py
ater/: fused_moe_bf16_asm.py  test_common.py  tuned_gemm.py
att/: input.txt
attention_repro/: README.md  block_metrics_4_20.csv  create_mir.sh  mir_cfg.py  run.sh  run_kernel.py  run_sweep.sh  test_attention.py  ua_2d_gfx1250_pr.py  ua_2d_gfx1250_pr_backup.py  unified_attention_2d.py  unified_attention_2d_merged.py  unified_attention_2d_merged_kv_const_shape.py  unified_attention_2d_pers.py
attention_repro2/: collect_am_trace.sh  collect_am_trace_decode.sh  collect_results.py  run.sh  run_am.sh  run_decode.sh  run_kernel.py  test_unified_attention.py  unified_attention_w_3d.py
baseline_results_a8w8_blockscale/: baseline_clean_nonpreshuffle.json  baseline_clean_preshuffle.json  baseline_triton34_nonpreshuffle.json  baseline_triton34_preshuffle.json  validate_clean_committed_nonpreshuffle.json  validate_clean_committed_preshuffle.json  validate_clean_final2_nonpreshuffle.json  validate_clean_final2_preshuffle.json  validate_clean_final3_nonpreshuffle.json  validate_clean_final3_preshuffle.json  validate_clean_final4_nonpreshuffle.json  validate_clean_final4_preshuffle.json  validate_clean_final_nonpreshuffle.json  validate_clean_final_preshuffle.json  validate_clean_fixed_nonpreshuffle.json  validate_clean_fixed_preshuffle.json  validation_triton36_nonpreshuffle.json  validation_triton36_preshuffle.json
bench_gluon_ua/: .gitignore  bench_ua.py  build_scan_md.py  compare_371.py  compare_371_3.6.0.txt  compare_371_3.7.0.txt  compare_371_3.7.1.txt  compare_371_3.8.0.txt  ctx1024_sweep.py  decode_38_check.py  decode_final.md  decode_final.py  decode_mfma16.md  decode_mfma16.py  decode_nw_sb.py  decode_singlebuf.py  decode_stride_constexpr.md  decode_stride_dyn_vs_constexpr.md  decode_warps.py  dump_ir.py  gather_perf.py  mfma_compare.py  mfma_results.md  page32_test.py  perf_scan.md  reg_decode.py  results.md  revert_triton_360.sh  scan_3.6.0.json  scan_3.7.0.json  scan_3.8.0.json  scan_versions.py  (+4 more)
cpp/: pa.cpp  (+15 more)
op_tests/opus/: CMakeLists.txt  Makefile  README.md  __init__.py  fp8_lds_probe.cc  qk_full_probe.cc  qk_nope_probe.cc  run_all_tests.py  run_tests.sh  test_integration.py  test_opus_basic  test_opus_basic.cpp  test_opus_types.py
op_tests/opus/device/: opus_device_test_ext.cpp  setup.py  test_async_load.cu  test_dtype_convert.cu  test_dtype_convert.h  test_finfo.cu  test_load_store_if.cu  test_mdiv.cu  test_mfma.h  test_mfma_f16.cu  test_mfma_f32.cu  test_mfma_f8.cu  test_mfma_scale.cu  test_mfma_scale.h  test_mma_step_k.cu  test_mxfp.cu  test_numeric_limits.cu  test_opus_device.py  test_opus_gmem_gfx1100.cu  test_opus_gmem_gfx1201.cu  test_opus_parse_gfx1201.cu  test_tr_load_f16.cu  test_vector_add.cu  test_wmma_f16.cu  test_wmma_f32.cu  test_wmma_f8.cu  test_wmma_gfx1201.cu  test_wmma_gfx1201_w64.cu  test_wmma_scale.cu  test_workgroup_barrier.cu
op_tests/opus/mfma/: README.md  debug_mfma.py  opus_mfma_ext.cpp  setup.py  test_opus_mfma.cu  test_opus_mfma.h  test_opus_mfma.py
(+7048 files in other folders)
