[build-system]
requires = [
    "pybind11>=3.0.1",
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel",
    "packaging",
    "psutil",
    "ninja",
    "pandas",
    "flydsl @ https://rocm.frameworks-nightlies.amd.com/whl/gfx942-gfx950/flydsl-0.1.0%2B20260318.2ca3913-cp312-cp312-manylinux_2_35_x86_64.whl"
]

[tool.setuptools_scm]
write_to = "aiter/_version.py"
write_to_template = "__version__ = '{version}'\n"
fallback_version = "0.1.0"
