[build-system]
requires = [
    "pybind11>=3.0.1",
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel",
    "packaging",
    "psutil",
    "ninja",
    "pandas",
    "flydsl @ git+https://github.com/ROCm/FlyDSL.git@656347f287611b1acecf49e852ca0b850cc3f1b9"
]

[tool.setuptools_scm]
write_to = "aiter/_version.py"
write_to_template = "__version__ = '{version}'\n"
fallback_version = "0.1.0"
